chore: deploy to branch gh-pages directly

--- a/.github/workflows/package-chart.yml
+++ b/.github/workflows/package-chart.yml
@@ -20,20 +20,16 @@ jobs:
       with:
         version: v3.12.0
 
-    - name: Package Helm chart
+        - name: Package Helm chart and generate index
       run: |
         helm package .
-        mkdir -p charts
-        mv *.tgz charts/
-        helm repo index charts --url https://rrandiak.github.io/kramerius-helm-chart/charts
+        mkdir -p repo
+        mv *.tgz repo/
+        helm repo index repo --url https://rrandiak.github.io/kramerius-helm-chart/
 
-    - name: Commit and push packaged chart and index.yaml
-      run: |
-        git config user.name "GitHub Actions"
-        git config user.email "actions@github.com"
-        git add charts
-        git commit -m "Automated: package Helm chart and update index"
-        git push
-      env:
-        # Use the default GITHUB_TOKEN for pushing back to repo
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Deploy to gh-pages branch
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./repo
+        publish_branch: gh-pages
