fix: add kind to kramerius deployment

--- a/templates/kramerius/deployment.yaml
+++ b/templates/kramerius/deployment.yaml
@@ -1,5 +1,7 @@
 {{- range .Values.instances }}
 
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: kramerius-{{ .name }}
   labels:
@@ -147,5 +149,7 @@ spec:
         - name: {{ . }}
         {{- end }}
       {{- end }}
+
+---
 
 {{- end }}
